log
Fri 09 Sep 2022 12:19:45 PM UTC: 
 tests:  0|6
total_score: 0/70
fcaff0c
Fri 09 Sep 2022 12:26:59 PM UTC: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:57:15: error: assignment to ‘long int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   57 |     map->size = NULL;
      |               ^
hashmap.c:59:18: error: assignment to ‘long int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   59 |     map->current = NULL;
      |                  ^
cc1: all warnings being treated as errors
Compilation failed
0d25e0b
Fri 09 Sep 2022 12:38:01 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:57:15: error: assignment to ‘long int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   57 |     map->size = NULL;
      |               ^
cc1: all warnings being treated as errors
Compilation failed
a332e4d
Fri 09 Sep 2022 12:38:09 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7ac3bb6
Fri 09 Sep 2022 12:39:28 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
beba672
Fri 09 Sep 2022 12:48:06 PM UTC: 
 hashmap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:62:47: error: implicit declaration of function ‘siezof’ [-Werror=implicit-function-declaration]
   62 |     map->buckets = (Pair **) calloc(capacity, siezof(Pair *));
      |                                               ^~~~~~
hashmap.c:62:54: error: expected expression before ‘Pair’
   62 |     map->buckets = (Pair **) calloc(capacity, siezof(Pair *));
      |                                                      ^~~~
cc1: all warnings being treated as errors
Compilation failed
a6c490c
Fri 09 Sep 2022 12:48:13 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
16af925
Fri 09 Sep 2022 12:48:52 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
3ddf17b
Fri 09 Sep 2022 12:49:12 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:65:18: error: assignment to ‘long int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   65 |     map->current = NULL;
      |                  ^
cc1: all warnings being treated as errors
Compilation failed
7647bf4
Fri 09 Sep 2022 12:49:21 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
7103907
Fri 09 Sep 2022 12:59:38 PM UTC: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:49:5: error: unknown type name ‘Pairs’; did you mean ‘Pair’?
   49 |     Pairs * p = (Pair *) malloc(sizeof(Pair));
      |     ^~~~~
      |     Pair
hashmap.c:49:13: error: conflicting types for ‘p’
   49 |     Pairs * p = (Pair *) malloc(sizeof(Pair));
      |             ^
hashmap.c:47:15: note: previous definition of ‘p’ was here
   47 |     HashMap * p = createMap(1);
      |               ^
hashmap.c:49:17: error: initialization of ‘int *’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
   49 |     Pairs * p = (Pair *) malloc(sizeof(Pair));
      |                 ^
hashmap.c:49:13: error: unused variable ‘p’ [-Werror=unused-variable]
   49 |     Pairs * p = (Pair *) malloc(sizeof(Pair));
      |             ^
cc1: all warnings being treated as errors
Compilation failed
788336a
Fri 09 Sep 2022 01:00:12 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:49:5: error: unknown type name ‘Pairs’; did you mean ‘Pair’?
   49 |     Pairs * p = (Pair *) malloc(sizeof(Pair));
      |     ^~~~~
      |     Pair
hashmap.c:49:13: error: conflicting types for ‘p’
   49 |     Pairs * p = (Pair *) malloc(sizeof(Pair));
      |             ^
hashmap.c:47:15: note: previous definition of ‘p’ was here
   47 |     HashMap * p = createMap(1);
      |               ^
hashmap.c:49:17: error: initialization of ‘int *’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
   49 |     Pairs * p = (Pair *) malloc(sizeof(Pair));
      |                 ^
hashmap.c:51:6: error: request for member ‘key’ in something not a structure or union
   51 |     p->key = key;
      |      ^~
hashmap.c:52:6: error: request for member ‘value’ in something not a structure or union
   52 |     p->value = value;
      |      ^~
cc1: all warnings being treated as errors
Compilation failed
41b61a4
Fri 09 Sep 2022 01:01:52 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:49:12: error: conflicting types for ‘p’
   49 |     Pair * p = (Pair *) malloc(sizeof(Pair));
      |            ^
hashmap.c:47:15: note: previous definition of ‘p’ was here
   47 |     HashMap * p = createMap(1);
      |               ^
Compilation failed
b5a2b0f
Fri 09 Sep 2022 01:02:03 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:47:15: error: ‘map’ redeclared as different kind of symbol
   47 |     HashMap * map = createMap(1);
      |               ^~~
hashmap.c:46:26: note: previous definition of ‘map’ was here
   46 | void insertMap(HashMap * map, char * key, void * value) {
      |                ~~~~~~~~~~^~~
hashmap.c:47:15: error: unused variable ‘map’ [-Werror=unused-variable]
   47 |     HashMap * map = createMap(1);
      |               ^~~
cc1: all warnings being treated as errors
Compilation failed
ffbafb0
Fri 09 Sep 2022 01:02:56 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:47:15: error: unused variable ‘pairs’ [-Werror=unused-variable]
   47 |     HashMap * pairs = createMap(1);
      |               ^~~~~
cc1: all warnings being treated as errors
Compilation failed
225091e
Fri 09 Sep 2022 01:09:52 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:47:23: error: too few arguments to function ‘createMap’
   47 |     HashMap * pairs = createMap();
      |                       ^~~~~~~~~
In file included from hashmap.c:6,
                 from test.c:4:
hashmap.h:20:11: note: declared here
   20 | HashMap * createMap(long capacity);
      |           ^~~~~~~~~
In file included from test.c:4:
hashmap.c:47:15: error: unused variable ‘pairs’ [-Werror=unused-variable]
   47 |     HashMap * pairs = createMap();
      |               ^~~~~
cc1: all warnings being treated as errors
Compilation failed
e67aa18
Fri 09 Sep 2022 01:09:59 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:47:15: error: unused variable ‘pairs’ [-Werror=unused-variable]
   47 |     HashMap * pairs = createMap(1);
      |               ^~~~~
cc1: all warnings being treated as errors
Compilation failed
45bfad1
Fri 09 Sep 2022 01:19:44 PM UTC: 
 hashmap.c | 18 +++++++++++++-----
 1 file changed, 13 insertions(+), 5 deletions(-)
 tests:  5|4
total_score: 30/70
6a0a14f
Fri 09 Sep 2022 05:15:28 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1feeeb7
Fri 09 Sep 2022 05:15:45 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
4e711aa
Fri 09 Sep 2022 05:16:24 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
364f952
